tests/invalids/invalidWhile3-1.gt
proc main ()
    int m;
begin 
    while m := n do
        m := n;
    od
end
